--- a/ss.html
+++ b/ss.html
@@ -9,6 +9,9 @@
 <body>
 
     <a href="http://" class="linkarrow">content</a>
+    <span class="badge badge-primary">10% off</span>
+    <span class="badge badge-secondary">10% off</span>
+    <span class="badge badge-third">10% off</span>
 
 </body>
 </html>
