--- a/ss.html
+++ b/ss.html
@@ -13,5 +13,16 @@
     <span class="badge badge-secondary">10% off</span>
     <span class="badge badge-third">10% off</span>
 
+    <ul class="list listinline">
+        <li class="listitem">item1</li>
+        <li class="listitem">item2</li>
+        <li class="listitem">item3</li>
+    </ul>
+    <ul class="list listtick">
+        <li class="listitem">item1</li>
+        <li class="listitem">item2</li>
+        <li class="listitem">item3</li>
+    </ul>
+
 </body>
 </html>
