--- a/ss.html
+++ b/ss.html
@@ -9,6 +9,7 @@
 <body>
 
     <a href="http://" class="linkarrow">content</a>
+    <br>
     <span class="badge badge-primary">10% off</span>
     <span class="badge badge-secondary">10% off</span>
     <span class="badge badge-third">10% off</span>
@@ -23,6 +24,12 @@
         <li class="listitem">item2</li>
         <li class="listitem">item3</li>
     </ul>
+    <div class="iconcontainer">
+        <svg class="icon">
+            <use xlink:href="/images/sprite.svg#search"></use>
+          </svg>
+    </div>
+    
 
 </body>
 </html>
