--- a/ss.html
+++ b/ss.html
@@ -29,6 +29,13 @@
             <use xlink:href="/images/sprite.svg#search"></use>
           </svg>
     </div>
+
+    <button class="btn btn-primary btn-block">BUY NOW</button>
+    <button class="btn btn-secondary btn-block">BUY NOW</button>
+    <a href="#" class="btn btn-third btn-block">BUYNOW</a>
+    <button class="btn btn-outline">BUYNOW</button>
+    <br>
+    <input type="text" class="input" placeholder="Enter domain name here...">
     
 
 </body>
