input fields with icons and buttons

--- a/ss.html
+++ b/ss.html
@@ -35,7 +35,15 @@
     <a href="#" class="btn btn-third btn-block">BUYNOW</a>
     <button class="btn btn-outline">BUYNOW</button>
     <br>
-    <input type="text" class="input" placeholder="Enter domain name here...">
+    <div class="input-group">
+        <div class="iconcontainer">
+            <svg class="icon">
+                <use xlink:href="/images/sprite.svg#search"></use>
+              </svg>
+        </div>
+        <input type="text" class="input" placeholder="Enter domain name here...">
+        <button class="btn btn-third">Search</button>
+    </div>
     
 
 </body>
