card struct defined

--- a/ss.html
+++ b/ss.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <!--
+
     <a href="http://" class="linkarrow">content</a>
     <br>
     <span class="badge badge-primary">10% off</span>
@@ -44,7 +46,26 @@
         <input type="text" class="input" placeholder="Enter domain name here...">
         <button class="btn btn-third">Search</button>
     </div>
-    
+-->
+<div style="display: flex;">
+<div style="width: 30%; padding: 4rem;">
+    <div class="card card-primary">
+        <header class="card-header">Card Title</header>
+        <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, aliquam?
+        </div>
+    </div>
+</div>
+<div style="width: 30%; padding: 4rem;">
+    <div class="card card-secondary">
+        <header class="card-header">Card Title</header>
+        <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, aliquam?
+        </div>
+    </div>
+</div>
+</div>
+
 
 </body>
 </html>
