Media object defined

--- a/ss.html
+++ b/ss.html
@@ -85,7 +85,6 @@
     </div>
 </div>
 </div>
--->
 
 <div style="width: 50%; padding: 4rem;">
     <div class="plan plan-popular">
@@ -110,9 +109,18 @@
 </div>
 </div>
 </div>
+-->
+<div class="media">
+    <div class="media-image">
+        <svg class="icon">
+            <use xlink:href="/images/sprite.svg#snap"></use>
+          </svg>
+    </div>
 
-
-
-
+<div class="media-body">
+    <h3 class="media-title">Easy start & Managed Updates</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptate?</p>
+</div>
+</div>
 </body>
 </html>
