--- a/ss.html
+++ b/ss.html
@@ -109,7 +109,8 @@
 </div>
 </div>
 </div>
--->
+
+
 <div class="media">
     <div class="media-image">
         <svg class="icon">
@@ -122,5 +123,27 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, voluptate?</p>
 </div>
 </div>
+-->
+
+<blockquote class="quote">
+    <p class="quote-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem placeat, 
+        praesentium minus quo quam voluptate aliquid excepturi rem incidunt 
+        molestias id maxime cupiditate adipisci voluptatem!</p>
+        <footer>
+            <div class="media">
+                <div class="media-image">
+                    <svg class="icon quote-line">
+                        <use xlink:href="/images/sprite.svg#line"></use>
+                      </svg>
+                </div>
+            
+            <div class="media-body">
+                <h3 class="media-title quote-author">ALEX.J</h3>
+                <p class="quote-organisation">ABC company</p>
+            </div>
+            </div>
+        </footer>
+</blockquote>
+
 </body>
 </html>
