--- a/ss.html
+++ b/ss.html
@@ -144,6 +144,15 @@
             </div>
         </footer>
 </blockquote>
+-->
+
+<div class="grid grid-1x3">
+    <div style="height: 100px;background: gold;"></div>
+    <div style="height: 100px;background: dodgerblue;"></div>
+    <div style="height: 100px;background: tomato;"></div>
+
+
+</div>
 
 </body>
 </html>
