--- a/ss.html
+++ b/ss.html
@@ -144,7 +144,7 @@
             </div>
         </footer>
 </blockquote>
--->
+
 
 <div class="grid grid-1x3">
     <div style="height: 100px;background: gold;"></div>
@@ -153,6 +153,45 @@
 
 
 </div>
+
+-->
+
+<div  style="padding: 5rem;">
+    <div class="card testimonial">
+        <div class="grid grid-1x2">
+            <div class="testimonial-image">
+            <img  src="images/happycustomer.JPG"  alt="A happy,smiling customer">
+            <div class="iconcontainer iconcontainer-third">
+                <svg class="icon icon-white">
+                    <use xlink:href="/images/sprite.svg#quotes"></use>
+                  </svg>
+            </div>
+        </div>
+
+        <blockquote class="quote">
+            <p class="quote-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Enim illum porro quos fugit aspernatur ea!</p>
+                <footer>
+                    <div class="media">
+                        <div class="media-image">
+                            <svg class="icon quote-line">
+                                <use xlink:href="/images/sprite.svg#line"></use>
+                              </svg>
+                        </div>
+                    
+                    <div class="media-body">
+                        <h3 class="media-title quote-author">ALEX.J</h3>
+                        <p class="quote-organisation">ABC company</p>
+                    </div>
+                    </div>
+                </footer>
+        </blockquote>
+                </div>
+    
+    </div>
+</div>
+
+
 
 </body>
 </html>
