--- a/ss.html
+++ b/ss.html
@@ -154,7 +154,9 @@
 
 </div>
 
--->
+
+
+
 
 <div  style="padding: 5rem;">
     <div class="card testimonial">
@@ -191,6 +193,19 @@
     </div>
 </div>
 
+-->
+
+<div class="callout callout-primary">
+    <div class="grid grid-1x2">
+        <div class="callout-content">
+            <h2 class="callout-heading">Ready to Get Started</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                 Magni sed suscipit quas? Quod consectetur, 
+                cum nemo velit minus eos! Repellendus.</p>
+        </div>
+        <a href="" class="btn btn-secondary btn-stretched">Get Started</a>
+    </div>
+</div>
 
 
 </body>
