--- a/ss.html
+++ b/ss.html
@@ -193,7 +193,9 @@
     </div>
 </div>
 
--->
+
+
+
 
 <div class="callout callout-primary">
     <div class="grid grid-1x2">
@@ -207,6 +209,30 @@
     </div>
 </div>
 
+-->
+<div class="collapsible ">
+    <header class="collapsible-header">
+        <h2 class="collapsible-heading">Item 1</h2>
+            <svg >
+                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
+            </svg>
+    </header>
+    <div class="collapsible-content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ea enim reiciendis quisquam non! Quidem perferendis voluptate fuga ut eum!
+    </div>
+</div>
+<div class="collapsible ">
+    <header class="collapsible-header">
+        <h2 class="collapsible-heading">Item 1</h2>
+            <svg >
+                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
+            </svg>
+    </header>
+    <div class="collapsible-content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ea enim reiciendis quisquam non! Quidem perferendis voluptate fuga ut eum!
+    </div>
+</div>
 
+<script src="js/main.js"></script>
 </body>
 </html>
