blocks has been deployed

--- a/ss.html
+++ b/ss.html
@@ -209,29 +209,54 @@
     </div>
 </div>
 
+
+
+
+<div class="collapsible ">
+    <header class="collapsible-header">
+        <h2 class="collapsible-heading">Item 1</h2>
+            <svg >
+                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
+            </svg>
+    </header>
+    <div class="collapsible-content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ea enim reiciendis quisquam non! Quidem perferendis voluptate fuga ut eum!
+    </div>
+</div>
+<div class="collapsible ">
+    <header class="collapsible-header">
+        <h2 class="collapsible-heading">Item 1</h2>
+            <svg >
+                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
+            </svg>
+    </header>
+    <div class="collapsible-content">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ea enim reiciendis quisquam non! Quidem perferendis voluptate fuga ut eum!
+    </div>
+</div>
+
 -->
-<div class="collapsible ">
-    <header class="collapsible-header">
-        <h2 class="collapsible-heading">Item 1</h2>
-            <svg >
-                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
-            </svg>
-    </header>
-    <div class="collapsible-content">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ea enim reiciendis quisquam non! Quidem perferendis voluptate fuga ut eum!
+
+<section class="block container">
+    <header class="block-header">
+    <h2 class="block-heading">Heading</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed repellat iure iusto laboriosam! Blanditiis, hic exercitationem fugiat dolores sint natus reiciendis amet, officiis aut sapiente labore, magni voluptatem nam.</p>
+</header>
+</section>
+
+<div style="width: 30%; padding: 4rem;">
+    <div class="card card-secondary">
+        <header class="card-header">Card Title</header>
+        <div class="card-body">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, aliquam?
+        </div>
     </div>
 </div>
-<div class="collapsible ">
-    <header class="collapsible-header">
-        <h2 class="collapsible-heading">Item 1</h2>
-            <svg >
-                <img  class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer">
-            </svg>
-    </header>
-    <div class="collapsible-content">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident ea enim reiciendis quisquam non! Quidem perferendis voluptate fuga ut eum!
-    </div>
-</div>
+
+<section class="block block-dark block-skewed-left">
+    <h2 class="block-heading">Heading</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed repellat iure iusto laboriosam! Blanditiis, hic exercitationem fugiat dolores sint natus reiciendis amet, officiis aut sapiente labore, magni voluptatem nam.</p>
+</section>
 
 <script src="js/main.js"></script>
 </body>
