--- a/ss.html
+++ b/ss.html
@@ -235,7 +235,8 @@
     </div>
 </div>
 
--->
+
+
 
 <section class="block container">
     <header class="block-header">
@@ -257,6 +258,21 @@
     <h2 class="block-heading">Heading</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed repellat iure iusto laboriosam! Blanditiis, hic exercitationem fugiat dolores sint natus reiciendis amet, officiis aut sapiente labore, magni voluptatem nam.</p>
 </section>
+
+-->
+
+<nav class="nav collapsible ">
+    <a class="nav-brand" href="/"><img src="images/logo.svg" alt=""></a>
+    <svg class="icon icon-white nav-toggler">
+        <use xlink:href="/images/sprite.svg#menu"></use>
+      </svg>
+      <ul class="list nav-list collapsible-content">
+        <li class="nav-item"><a href="#">Hosting</a></li>
+        <li class="nav-item"><a href="#">VPS</a></li>
+        <li class="nav-item"><a href="#">Domain</a></li>
+        <li class="nav-item"><a href="#">Pricing</a></li>
+      </ul>
+</nav>
 
 <script src="js/main.js"></script>
 </body>
