Hero has arrived

--- a/ss.html
+++ b/ss.html
@@ -259,7 +259,9 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati sed repellat iure iusto laboriosam! Blanditiis, hic exercitationem fugiat dolores sint natus reiciendis amet, officiis aut sapiente labore, magni voluptatem nam.</p>
 </section>
 
--->
+
+
+
 
 <nav class="nav collapsible ">
     <a class="nav-brand" href="/"><img src="images/logo.svg" alt=""></a>
@@ -273,6 +275,20 @@
         <li class="nav-item"><a href="#">Pricing</a></li>
       </ul>
 </nav>
+
+-->
+
+    <section class="block block-dark block-skewed-left hero">
+        <div class="container grid grid-1x2">
+          <header class="block-header hero-content">
+            <h1 class="block-heading">Cloud Hosting for Pros</h1>
+            <p class="hero-tagline">Deploy your websites in less than 60 seconds.</p>
+            <a href="" class="btn btn-third btn-stretched">Get Started</a>
+          </header>
+          <img class="hero-image" src="images/banner.png" alt="" />
+        </div>
+      </section>
+      
 
 <script src="js/main.js"></script>
 </body>
