--- a/ss.html
+++ b/ss.html
@@ -285,7 +285,17 @@
             <p class="hero-tagline">Deploy your websites in less than 60 seconds.</p>
             <a href="" class="btn btn-third btn-stretched">Get Started</a>
           </header>
-          <img class="hero-image" src="images/banner.png" alt="" />
+          <picture>
+            <source
+              type="image/webp"
+              srcset="images/banner.webp 1x, images/banner@2x.webp 2x"
+            />
+            <source
+              type="image/png"
+              srcset="images/banner.png 1x, images/banner@2x.png 2x"
+            />
+            <img class="hero-image" src="images/banner.png" alt="" />
+          </picture>
         </div>
       </section>
       
