--- a/ss.html
+++ b/ss.html
@@ -301,7 +301,9 @@
         </div>
       </section>
       
--->
+
+
+
 
 <section class="block container block-domain">
     <header class="block-header">
@@ -326,6 +328,76 @@
       <li>.net $10</li>
       <li>.xyz $10</li>
     </ul>
+  </section>
+
+
+  -->
+
+
+  <section class="block  container block-plans">
+    <div class="grid grid-1x3">
+      <div class="plan">
+        <div class="card card-secondary">
+          <header class="card-header">
+            <h3 class="plan-name">Entry</h3>
+            <span class="plan-price">$14</span>
+            <span class="plan-billing">/month</span>
+            <span class="badge badge-secondary badge-third">10% OFF</span>
+            <span class="plan-description">East start on the cloud</span>
+          </header>
+          <div class="card-body">
+            <ul class="list listtick">
+              <li class="listitem">Unlimited Websites</li>
+              <li class="listitem">Unlimited Bandwidth</li>
+              <li class="listitem">100 GB SSD Sotrage</li>
+              <li class="listitem">3 GB RAM</li>
+            </ul>
+            <button class="btn btn-outline btn-block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="plan plan-popular">
+        <div class="card card-primary">
+          <header class="card-header">
+            <h3 class="plan-name">Entry</h3>
+            <span class="plan-price">$14</span>
+            <span class="plan-billing">/month</span>
+            <span class="badge badge-primary badge-third">10% OFF</span>
+            <span class="plan-description">East start on the cloud</span>
+          </header>
+          <div class="card-body">
+            <ul class="list listtick">
+              <li class="listitem">Unlimited Websites</li>
+              <li class="listitem">Unlimited Bandwidth</li>
+              <li class="listitem">100 GB SSD Sotrage</li>
+              <li class="listitem">3 GB RAM</li>
+            </ul>
+            <button class="btn btn-outline btn-block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="plan">
+        <div class="card card-secondary">
+          <header class="card-header">
+            <h3 class="plan-name">Entry</h3>
+            <span class="plan-price">$14</span>
+            <span class="plan-billing">/month</span>
+            <span class="badge badge-secondary badge-third">10% OFF</span>
+            <span class="plan-description">East start on the cloud</span>
+          </header>
+          <div class="card-body">
+            <ul class="list listtick">
+              <li class="listitem">Unlimited Websites</li>
+              <li class="listitem">Unlimited Bandwidth</li>
+              <li class="listitem">100 GB SSD Sotrage</li>
+              <li class="listitem">3 GB RAM</li>
+            </ul>
+            <button class="btn btn-outline btn-block">Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
   
 
