Feature-Block have arrived

--- a/ss.html
+++ b/ss.html
@@ -331,7 +331,6 @@
   </section>
 
 
-  -->
 
 
   <section class="block  container block-plans">
@@ -400,6 +399,80 @@
 
   </section>
   
+  -->
+<section class="block container">
+    <header class="block-header">
+        <h2>Host on the Cloud to keep Growing</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores, repellendus.</p>
+    </header>
+<article class="grid grid-1x2 feature">
+    <div class="feature-content">
+        <div class="iconcontainer">
+            <svg class="icon">
+                <use xlink:href="/images/sprite.svg#easy"></use>
+              </svg>
+        </div>
+        <h3 class="feature-heading">Super Easy to use</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, repudiandae. Eos debitis suscipit in facere.</p>
+        <a href="#" class="linkarrow">Learn More</a>
+    </div>
+    <img  class="feature-image" src="images/easy.jpg" alt="">
+</article>
+
+<article class="grid grid-1x2 feature">
+    <div class="feature-content">
+      <span class="icon-container">
+        <svg class="icon icon-primary">
+          <use xlink:href="images/sprite.svg#computer"></use>
+        </svg>
+      </span>
+      <h3 class="feature-heading">Simply Fast Websites</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam obcaecati
+        vel ad unde est illo at. Labore excepturi officia dolores!
+      </p>
+      <a href="#" class="linkarrow">Learn More</a>
+    </div>
+    
+      <img class="feature-image" src="images/fast.jpg" alt="" />
+  </article>
+
+  <article class="grid grid-1x2 feature">
+    <div class="feature-content">
+      <span class="icon-container">
+        <svg class="icon icon-primary">
+          <use xlink:href="images/sprite.svg#wordpress"></use>
+        </svg>
+      </span>
+      <h3 class="feature-heading">Wordpress Made Easy</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam obcaecati
+        vel ad unde est illo at. Labore excepturi officia dolores!
+      </p>
+      <a href="#" class="linkarrow">Learn More</a>
+    </div>
+    
+      <img class="feature-image" src="images/wordpress.jpg" alt="" />
+  </article>
+
+  <article class="grid grid-1x2 feature">
+    <div class="feature-content">
+      <span class="icon-container">
+        <svg class="icon icon-primary">
+          <use xlink:href="images/sprite.svg#clock"></use>
+        </svg>
+      </span>
+      <h3 class="feature-heading">24/7 Expert Support</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam obcaecati
+        vel ad unde est illo at. Labore excepturi officia dolores!
+      </p>
+      <a href="#" class="linkarrow">Learn More</a>
+    </div>
+      <img class="feature-image" src="images/support.jpg" alt="" />
+  </article>
+</section>
+
 
 
 <script src="js/main.js"></script>
