Testimonial has been given

--- a/ss.html
+++ b/ss.html
@@ -475,7 +475,6 @@
   </article>
 </section>
 
-  -->
 
 
   <section class="block block-dark block-skewed-right block-showcase">
@@ -540,6 +539,55 @@
     </div>
   </section>
   
+  -->
+
+<setion class="block">
+  <header class="block-header">
+    <h2>What are our customer Saying</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, autem.
+    </p>
+  </header>
+  <div class="container">
+    <div  style="padding: 5rem;">
+      <div class="card testimonial">
+          <div class="grid grid-1x2">
+              <div class="testimonial-image">
+              <img  src="images/happycustomer.JPG"  alt="A happy,smiling customer">
+              <div class="iconcontainer iconcontainer-third">
+                  <svg class="icon icon-white">
+                      <use xlink:href="/images/sprite.svg#quotes"></use>
+                    </svg>
+              </div>
+          </div>
+  
+          <blockquote class="quote">
+              <p class="quote-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores amet incidunt earum, ea sequi omnis quia officiis delectus veritatis
+                 inventore explicabo consequuntur exercitationem consectetur magni laboriosam vel necessitatibus minus sapiente pariatur minima, aliquid cupiditate et dicta iste.
+                 Magni eum alias inventore unde qui repudiandae, eos dolorum beatae dolor similique culpa?
+              </p>
+                  <footer>
+                      <div class="media">
+                          <div class="media-image">
+                              <svg class="icon quote-line">
+                                  <use xlink:href="/images/sprite.svg#line"></use>
+                                </svg>
+                          </div>
+                      
+                      <div class="media-body">
+                          <h3 class="media-title quote-author">ALEX.J</h3>
+                          <p class="quote-organisation">ALEXIFY</p>
+                      </div>
+                      </div>
+                  </footer>
+          </blockquote>
+                  </div>
+      
+      </div>
+  </div>
+  
+  </div>
+</setion>
 
 
 <script src="js/main.js"></script>
