--- a/ss.html
+++ b/ss.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ALEXIFY</title>
+        <meta name="description" content="If i can, Then why not you...">
+        <meta property="og:title" content="Alexify...">
+        <meta property="og:description" content="Alexify...">
+        <meta property="og:image" content="http://">
+        <meta property="og:url" content="https//alexified.com">
+
+
+    <title>ALEXIFY - We can do it!</title>
     <link rel="stylesheet" href="ss.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
@@ -335,12 +342,10 @@
 <footer class="block block-dark footer">
   <div class="container grid footer-section">
     <section class="collapsible collapsible-expanded footer-section">
-      <header class="collapsible-header">
+      <div class="collapsible-header">
           <h2 class="collapsible-heading footer-heading">Products</h2>
-              <svg >
                   <img class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer"/>
-              </svg>
-      </header>
+            </div>
       <div class="collapsible-content">
         <ul class="list">
           <li><a href="#">Website Hosting</a></li>
@@ -350,12 +355,10 @@
       </div>
     </section>
     <section class="collapsible footer-section">
-      <header class="collapsible-header">
+      <div class="collapsible-header">
           <h2 class="collapsible-heading footer-heading">Company</h2>
-              <svg >
                   <img class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer"/>
-              </svg>
-      </header>
+            </div>
       <div class="collapsible-content">
         <ul class="list">
           <li><a href="#">About</a></li>
@@ -364,12 +367,10 @@
         </ul>      </div>
     </section>
     <section class="collapsible footer-section">
-      <header class="collapsible-header">
+      <div class="collapsible-header">
           <h2 class="collapsible-heading footer-heading">Support</h2>
-              <svg >
                   <img class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer"/>
-              </svg>
-      </header>
+            </div>
       <div class="collapsible-content">
         <ul class="list">
           <li><a href="#">Contact</a></li>
@@ -378,12 +379,10 @@
         </ul>      </div>
     </section>
     <section class="collapsible footer-section">
-      <header class="collapsible-header">
+      <div class="collapsible-header">
           <h2 class="collapsible-heading footer-heading">Domain</h2>
-              <svg >
                   <img class="icon icon-white collapsible-icon" src="images/chevron-down-square-svgrepo-com.svg"  alt="A happy,smiling customer"/>
-              </svg>
-      </header>
+            </div>
       <div class="collapsible-content">
         <ul class="list">
           <li><a href="#">Domain Checker</a></li>
@@ -393,10 +392,10 @@
       </div>
       
     </section>
-    <section class="footer-brand">
+    <div class="footer-brand">
       <img src="images/logo.svg" alt="">
       <p class="footer-copyright">Copyright 2022 Alex.J</p>
-    </section>
+    </div>
   </div>
 </footer>
 
